// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar icon 1`] = `
<div
  className="MuiAvatar-root-4 MuiAvatar-colorDefault-5 sc-bdVaJa bDWFJH"
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-7"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M11.5 9C10.12 9 9 10.12 9 11.5s1.12 2.5 2.5 2.5 2.5-1.12 2.5-2.5S12.88 9 11.5 9zM20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm-3.21 14.21l-2.91-2.91c-.69.44-1.51.7-2.39.7C9.01 16 7 13.99 7 11.5S9.01 7 11.5 7 16 9.01 16 11.5c0 .88-.26 1.69-.7 2.39l2.91 2.9-1.42 1.42z"
    />
  </svg>
</div>
`;

exports[`Storyshots Avatar image 1`] = `
<div
  className="MuiAvatar-root-1 sc-bdVaJa bDWFJH"
>
  <img
    alt="avatar"
    className="MuiAvatar-img-3"
    src="https://via.placeholder.com/64x64"
  />
</div>
`;

exports[`Storyshots Avatar letter 1`] = `
<div
  className="MuiAvatar-root-14 MuiAvatar-colorDefault-15 sc-bdVaJa bDWFJH"
>
  J
</div>
`;

exports[`Storyshots Button/Contained default 1`] = `
<button
  className="MuiButtonBase-root-170 MuiButton-root-146 MuiButton-contained-155 MuiButton-raised-158 sc-bwzfXH uTxCW"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-147"
  >
    Button
  </span>
  <span
    className="MuiTouchRipple-root-173"
  />
</button>
`;

exports[`Storyshots Button/Contained disabled 1`] = `
<button
  className="MuiButtonBase-root-272 MuiButtonBase-disabled-273 MuiButton-root-248 MuiButton-contained-257 MuiButton-raised-260 MuiButton-disabled-266 sc-bwzfXH uTxCW"
  disabled={true}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiButton-label-249"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Button/Contained primary 1`] = `
<button
  className="MuiButtonBase-root-204 MuiButton-root-180 MuiButton-contained-189 MuiButton-containedPrimary-190 MuiButton-raised-192 MuiButton-raisedPrimary-193 sc-bwzfXH uTxCW"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-181"
  >
    Button
  </span>
  <span
    className="MuiTouchRipple-root-207"
  />
</button>
`;

exports[`Storyshots Button/Contained secondary 1`] = `
<button
  className="MuiButtonBase-root-238 MuiButton-root-214 MuiButton-contained-223 MuiButton-containedSecondary-225 MuiButton-raised-226 MuiButton-raisedSecondary-228 sc-bwzfXH uTxCW"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-215"
  >
    Button
  </span>
  <span
    className="MuiTouchRipple-root-241"
  />
</button>
`;

exports[`Storyshots Button/Text default 1`] = `
<button
  className="MuiButtonBase-root-41 MuiButton-root-17 MuiButton-text-19 MuiButton-flat-22 sc-bwzfXH uTxCW"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-18"
  >
    Button
  </span>
  <span
    className="MuiTouchRipple-root-44"
  />
</button>
`;

exports[`Storyshots Button/Text disabled 1`] = `
<button
  className="MuiButtonBase-root-143 MuiButtonBase-disabled-144 MuiButton-root-119 MuiButton-text-121 MuiButton-flat-124 MuiButton-disabled-137 sc-bwzfXH uTxCW"
  disabled={true}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiButton-label-120"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Button/Text primary 1`] = `
<button
  className="MuiButtonBase-root-75 MuiButton-root-51 MuiButton-text-53 MuiButton-textPrimary-54 MuiButton-flat-56 MuiButton-flatPrimary-57 sc-bwzfXH uTxCW"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-52"
  >
    Button
  </span>
  <span
    className="MuiTouchRipple-root-78"
  />
</button>
`;

exports[`Storyshots Button/Text secondary 1`] = `
<button
  className="MuiButtonBase-root-109 MuiButton-root-85 MuiButton-text-87 MuiButton-textSecondary-89 MuiButton-flat-90 MuiButton-flatSecondary-92 sc-bwzfXH uTxCW"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-86"
  >
    Button
  </span>
  <span
    className="MuiTouchRipple-root-112"
  />
</button>
`;

exports[`Storyshots Card complex 1`] = `
<div
  className="MuiPaper-root-407 MuiPaper-elevation1-410 MuiPaper-rounded-408 MuiCard-root-406 sc-dnqmqq goYOmy"
>
  <div
    className="MuiCardHeader-root-434 sc-bZQynM bOrPFB"
  >
    <div
      className="MuiCardHeader-avatar-435"
    >
      <div
        className="MuiAvatar-root-440 MuiAvatar-colorDefault-441 sc-bdVaJa bDWFJH"
      >
        J
      </div>
    </div>
    <div
      className="MuiCardHeader-content-437"
    >
      <span
        className="MuiTypography-root-443 MuiTypography-body2-451 MuiCardHeader-title-438"
      >
        Shrimp and Chorizo Paella
      </span>
      <span
        className="MuiTypography-root-443 MuiTypography-body2-451 MuiTypography-colorTextSecondary-466 MuiCardHeader-subheader-439"
      >
        September 14, 2016
      </span>
    </div>
    <div
      className="MuiCardHeader-action-436"
    >
      <button
        className="MuiButtonBase-root-474 MuiIconButton-root-468 sc-htoDjs bZzhDu"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-473"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-477"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-484"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiCardMedia-root-491 true sc-EHOje jvzENE"
    style={
      Object {
        "backgroundImage": "url(\\"https://burst.shopifycdn.com/photos/horseshoe-bend-grand-canyon_373x.progressive.jpg\\")",
      }
    }
    title="Image caption"
  />
  <div
    className="MuiCardContent-root-493 sc-ifAKCX cFlEyZ"
  >
    <p
      className="MuiTypography-root-443 MuiTypography-body1-452 sc-gzVnrw ibZhkv"
    >
      This impressive paella is a perfect party dish and a fun meal to cook
together with your guests. Add 1 cup of frozen peas along with the
mussels, if you like.
    </p>
  </div>
  <div
    className="MuiCardActions-root-494 sc-bxivhb bUZGRr"
  >
    <button
      className="MuiButtonBase-root-474 MuiIconButton-root-468 sc-htoDjs bZzhDu"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-473"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-477"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-484"
      />
    </button>
    <button
      className="MuiButtonBase-root-474 MuiIconButton-root-468 sc-htoDjs bZzhDu"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-473"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-477"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-484"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Card media 1`] = `
<div
  className="MuiPaper-root-341 MuiPaper-elevation1-344 MuiPaper-rounded-342 MuiCard-root-340 sc-dnqmqq goYOmy"
>
  <div
    className="MuiCardMedia-root-368 sc-iwsKbI hhXreb"
    style={
      Object {
        "backgroundImage": "url(\\"https://burst.shopifycdn.com/photos/horseshoe-bend-grand-canyon_373x.progressive.jpg\\")",
      }
    }
    title="Image caption"
  />
  <div
    className="MuiCardActions-root-370 sc-bxivhb bUZGRr"
  >
    <button
      className="MuiButtonBase-root-396 MuiButton-root-372 MuiButton-text-374 MuiButton-flat-377 MuiCardActions-action-371 sc-bwzfXH uTxCW"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-373"
      >
        Action Button
      </span>
      <span
        className="MuiTouchRipple-root-399"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Card simple 1`] = `
<div
  className="MuiPaper-root-276 MuiPaper-elevation1-279 MuiPaper-rounded-277 MuiCard-root-275 sc-dnqmqq goYOmy"
>
  <div
    className="MuiCardContent-root-303 sc-ifAKCX cFlEyZ"
  >
    Lorem Ipsum
  </div>
  <div
    className="MuiCardActions-root-304 sc-bxivhb bUZGRr"
  >
    <button
      className="MuiButtonBase-root-330 MuiButton-root-306 MuiButton-text-308 MuiButton-flat-311 MuiButton-sizeSmall-327 MuiCardActions-action-305 sc-bwzfXH uTxCW"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-307"
      >
        Action Button
      </span>
      <span
        className="MuiTouchRipple-root-333"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots IconButton default 1`] = `
<button
  className="MuiButtonBase-root-502 MuiIconButton-root-496 sc-htoDjs bZzhDu"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiIconButton-label-501"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-505"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
  <span
    className="MuiTouchRipple-root-512"
  />
</button>
`;

exports[`Storyshots Typography body 1 1`] = `
<p
  className="MuiTypography-root-719 MuiTypography-body1-728 sc-gzVnrw ibZhkv"
>
  Typography
</p>
`;

exports[`Storyshots Typography body 2 1`] = `
<aside
  className="MuiTypography-root-694 MuiTypography-body2-702 sc-gzVnrw ibZhkv"
>
  Typography
</aside>
`;

exports[`Storyshots Typography caption 1`] = `
<span
  className="MuiTypography-root-744 MuiTypography-caption-754 sc-gzVnrw ibZhkv"
>
  Typography
</span>
`;

exports[`Storyshots Typography display 1 1`] = `
<h1
  className="MuiTypography-root-594 MuiTypography-display1-598 sc-gzVnrw ibZhkv"
>
  Typography
</h1>
`;

exports[`Storyshots Typography display 2 1`] = `
<h1
  className="MuiTypography-root-569 MuiTypography-display2-572 sc-gzVnrw ibZhkv"
>
  Typography
</h1>
`;

exports[`Storyshots Typography display 3 1`] = `
<h1
  className="MuiTypography-root-544 MuiTypography-display3-546 sc-gzVnrw ibZhkv"
>
  Typography
</h1>
`;

exports[`Storyshots Typography display 4 1`] = `
<h1
  className="MuiTypography-root-519 MuiTypography-display4-520 sc-gzVnrw ibZhkv"
>
  Typography
</h1>
`;

exports[`Storyshots Typography headline 1`] = `
<h1
  className="MuiTypography-root-619 MuiTypography-headline-624 sc-gzVnrw ibZhkv"
>
  Typography
</h1>
`;

exports[`Storyshots Typography nowrap 1`] = `
<p
  className="MuiTypography-root-769 MuiTypography-body1-778 MuiTypography-noWrap-785 MuiTypography-gutterBottom-786 sc-gzVnrw ibZhkv"
>
   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</p>
`;

exports[`Storyshots Typography subheading 1`] = `
<h3
  className="MuiTypography-root-669 MuiTypography-subheading-676 sc-gzVnrw ibZhkv"
>
  Typography
</h3>
`;

exports[`Storyshots Typography title 1`] = `
<h2
  className="MuiTypography-root-644 MuiTypography-title-650 sc-gzVnrw ibZhkv"
>
  Typography
</h2>
`;
